--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -1,7 +1,8 @@
-
 {
   "current": {
     "logo": "shopify://shop_images/generate-a-logo-for-this-project_1fccac38-3dc7-4ef7-95d5-4d0e355615c0.png",
+    "favicon": "shopify://shop_images/generate-a-logo-for-this-project_1fccac38-3dc7-4ef7-95d5-4d0e355615c0.png",
+    "footer_logo_width": 120,
     "color_primary": "#d4a574",
     "color_secondary": "#b8956a",
     "color_accent": "#e8b4b8",
@@ -12,6 +13,11 @@
     "type_body_font": "assistant_n4",
     "page_width": 1200,
     "button_border_radius": 4,
+    "social_facebook_link": "https://www.facebook.com",
+    "social_instagram_link": "https://www.instagram.com",
+    "social_twitter_link": "https://twitter.com",
+    "social_pinterest_link": "https://www.pinterest.com",
+    "social_youtube_link": "https://www.youtube.com",
     "currency_code_enabled": false,
     "cart_type": "page",
     "cart_notes_enable": false,
@@ -31,14 +37,19 @@
         "settings": {
           "footer_text": "<p>Your trusted source for premium beauty and skincare products.</p>",
           "show_social": true,
+          "social_heading": "Follow Us",
           "footer_menu": "footer",
           "footer_menu_heading": "Quick Links",
           "show_contact": true,
           "contact_heading": "Contact Us",
-          "contact_email": "",
-          "contact_phone": "",
-          "contact_address": "",
-          "show_payment_icons": true
+          "contact_email": "infor@auracosmetic.com",
+          "contact_phone": "+231-884-323-403",
+          "contact_address": "Paynesville City",
+          "show_payment_icons": true,
+          "show_newsletter": true,
+          "newsletter_heading": "Stay Updated",
+          "newsletter_text": "Subscribe to get special offers and beauty tips.",
+          "newsletter_placeholder": "Enter your email"
         }
       },
       "announcement-bar": {
